fixed content align

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 }
 body
 {
-  margin: 0;
+  margin: 0%;
   padding: 0;
   top: 0;
   left: 0;
@@ -58,7 +58,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 1rem 5rem; */
+  padding: 1rem 5rem;
   align-items: center;
   gap: 5em;
 }
@@ -78,13 +78,14 @@ header {
   display: flex;
   /* margin: 0 5rem; */
   /* gap: 10em; */
+  /* gap: 20%; */
   
 }
 
 .nav a {
   color: var(--jet);
   cursor: pointer;
-  margin: 0 5em;
+  margin: 0 3vw;
   transition: 0.5s;
 }
 
@@ -125,15 +126,24 @@ header {
   font-size: 3em;
   font-family: "Nexa Bold";
 }
+.content{
+  width: 100%;
+  top: 80vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-content: center;
+  align-items: center;
+}
 
 /* Selectors for Home page */
 
 .titleblock {
-  width: 100%;
-  height: 50vh;
-  margin-top: 10%;
+  width: inherit;
+  height: inherit;
+  margin-top: 20vb;
   /* margin-bottom: 4%; */
-  margin-left: 10%;
+  margin-left: 10vb;
   /* margin-right: 16%; */
   background: none;
 }
@@ -202,10 +212,11 @@ header {
 }
 
 .logomain img{
-  width: 25%;
+  width: 25vw;
+  height: 25vw;
   display: flex;
-  margin-left: 150%;
-  margin-right: 150%;
+  /* margin-left: 150%; */
+  /* margin-right: 150%; */
   margin-top: 20%;
   margin-bottom: 20%;
   filter: drop-shadow(5px 5px 9px #12130f);
@@ -213,13 +224,6 @@ header {
 
 .logomain img:hover{
   animation: fadeOut 2s ease 0s 1 normal forwards;
-}
-
-.content{
-  width: 100%;
-  top: 80vh;
-  text-align: center;
-  align-content: center;
 }
 
 .content img{
@@ -246,11 +250,13 @@ header {
 
 .content p {
   font-size: 2em;
+  margin: 0 10vw;
 }
 
 .content blockquote{
   font-size: 2em;
   font-style: italic;
+  margin: 0 10vw;
 }
 
 /* Selectors for Services Page */
@@ -258,11 +264,10 @@ header {
   font-size: inherit;
   font-family: "Nexa Bold";
 }
-
 .divTable{
 	display: table;
-	width: 100%;
   font-size: 2em;
+  width: 90%;
 }
 .divTableRow {
 	display: table-row;
